--- a/react-1/package.json
+++ b/react-1/package.json
@@ -2,6 +2,7 @@
   "name": "react-1",
   "version": "0.1.0",
   "type": "module",
+  "homepage": "https://vyacheslav-marozau.github.io/Social-Network-On-React-Simply-Better-Then-Facebook",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -22,9 +23,11 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-test-renderer": "^17.0.2"
   }
 }
